# parapet

./: .gitignore  Cargo.toml  README.md
src/: builder.rs  connection.rs  dispatcher.rs  error.rs  graphviz.rs  interactive.rs  job.rs  lib.rs  main.rs  network.rs  node.rs  packet.rs  parapet.rs  path.rs  pending_state.rs  proto_connection.rs  proto_node.rs
src/builder/: mod.rs  running.rs
src/ci/: build.rs  builder.rs  cache.rs  dispatcher.rs  job.rs  mod.rs  project.rs  workspace.rs
src/ci/sandbox/: basic.rs  mod.rs
src/comm/: connection.rs  mod.rs
src/comm/local/: connected.rs  handle.rs  node.rs  pending.rs  tcp.rs
src/comm/remote/: mod.rs  pending.rs
src/dispatcher/: mod.rs
src/io/: builder.rs  mod.rs
src/job/: mod.rs  run.rs
src/local/: connected.rs  handle.rs  mod.rs  node.rs  pending.rs  proto_node.rs  tcp.rs
src/local/remote/: pending.rs
src/network/: connection.rs  mod.rs  network.rs  node.rs  notify.rs  path.rs  status.rs
src/network/local/: connected.rs  handle.rs  node.rs  pending.rs  tcp.rs
src/network/remote/: mod.rs  pending.rs  status.rs
src/protocol/: ci.rs  job.rs  mod.rs  network.rs  user_agent.rs
src/protocol/types/: array.rs  composite.rs  map.rs  mod.rs  numerics.rs  string.rs  tuple.rs
src/remote/: pending.rs
src/server/: mod.rs  proto_connection.rs
src/slave/: basic.rs  gaol.rs  mod.rs
src/workspace/: basic.rs  build.rs  cache.rs  gaol.rs  mod.rs  project.rs  sandbox.rs  strategy.rs  workspace.rs
src/workspace/sandbox/: basic.rs  mod.rs
tools/: node.rs
