[package]
name = "parapet"
version = "0.1.1"
authors = ["Dylan McKay <dylanmckay34@gmail.com>"]

description = "Peer to peer build system"
license = "MIT"
repository = "https://github.com/dylanmckay/parapet"

[dependencies]
mio = "0.6"
slab = "0.3"
uuid = { version = "0.3", features = ["v4", "serde"] }
byteorder = "0.5"
graphsearch = "0.6"
protocol = { version = "0.1.10", features = ["uuid"] }
clap = "2.11"
dot = "0.1"
gaol = { git = "https://github.com/servo/gaol.git" }
twox-hash = "1.0.0"
walkdir = "0.1.8"
itertools = "0.5.2"

[dev-dependencies]
stainless = "*"

[[bin]]
name = "node"
path = "tools/node.rs"

