[package]
name = "parapet"
version = "0.1.1"
authors = ["Dylan McKay <me@dylanmckay.io>"]

description = "Peer to peer build system"
license = "MIT"
repository = "https://github.com/dylanmckay/parapet"

[dependencies]
mio = "0.6"
slab = "0.3"
uuid = { version = "0.6", features = ["v4", "serde"] }
byteorder = "1.2"
graphsearch = "0.6"
protocol = { version = "0.3", features = ["uuid"] }
clap = "2.31"
twox-hash = "1.1.0"
walkdir = "2.1"
itertools = "0.7"

[[bin]]
name = "node"
path = "tools/node.rs"

